<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewForumFragment">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/forum_title"
        android:inputType="text"
        android:maxLength="140"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/forum_description"
        android:inputType="text"
        android:maxLength="140"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonSubmitNewForum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <TextView
        android:id="@+id/textViewCancelNewForum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textSize="19sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubmitNewForum"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmitNewForum" />

</androidx.constraintlayout.widget.ConstraintLayout>